added display section subtitle

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,6 +88,9 @@
                 </div>
             </div>
 
+            <!-- Subtitle Display Area -->
+            <div id="subtitleDisplay" class="subtitle-display"></div>
+
             <!-- ASL Avatar Section -->
             <div class="asl-section">
                 <div class="section-header">
