--- a/frontend/test-opencv.html
+++ b/frontend/test-opencv.html
@@ -115,7 +115,7 @@
         let isKeypointTestRunning = false;
         
         function onOpenCvReady() {
-            console.log('✅ OpenCV.js loaded successfully');
+            console.log('OpenCV.js loaded successfully');
             openCvReady = true;
             document.getElementById('opencvStatus').className = 'status success';
             document.getElementById('opencvStatus').textContent = 'OpenCV.js loaded successfully';
