--- a/frontend/debug-opencv.html
+++ b/frontend/debug-opencv.html
@@ -107,7 +107,7 @@
         let isTracking = false;
         
         function onOpenCvReady() {
-            console.log('✅ OpenCV.js loaded successfully');
+            console.log('OpenCV.js loaded successfully');
             openCvReady = true;
             updateStatus('OpenCV.js ready', 'success');
         }
